# python-ground-up

./: README.md  compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 1_create_customer_table.py
python_ground_up/: database.py  main.py
python_ground_up/customer/: api.py  models.py  repository.py  service.py
src/: database.py  main.py  settings.py
src/customer/: api.py  models.py  repository.py  schemas.py  service.py
tests/: client.py
tests/customer/: test_customer_api.py
