[tool.poetry]
name = "python-ground-up"
version = "0.1.0"
description = ""
authors = ["snimmo <stephennimmo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
poethepoet = "^0.22.1"
httpx = "^0.24.1"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
run = "uvicorn python_ground_up.main:app --reload"
test = "pytest -v"
lint = "ruff ."
migrate = "alembic upgrade head"
compose-up = "podman-compose -f compose.yaml up -d"
compose-down = "podman-compose -f compose.yaml down"